fixed margins for project section on mobile devices

--- a/src/app/main/home.component.css
+++ b/src/app/main/home.component.css
@@ -2,7 +2,7 @@
 main{
     min-height: 100%;
     min-height: 100vh;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 .summary {
     padding: 20px 15px;
@@ -110,6 +110,7 @@ div.flex-container .card {
     border-right: 5px solid #810a37;
     border-bottom: 5px solid #810a37;
     margin: 10px;
+    
     box-shadow: 0px 0px 2px 0px rgb(0, 0, 0, 0.5);
     flex: 1 300px;
 }
@@ -155,6 +156,7 @@ p.card-header {
     margin: 50px auto;
     min-width: 270px;
     box-shadow: 0px 0px 3px 0px rgb(0, 0, 0, 0.3);
+    margin-bottom: 100px;
 }
 
 .projects img {
@@ -210,9 +212,9 @@ span.tags {
         box-shadow: none;
         padding-bottom: 15px;
         margin: 0px auto;
-
-
+        margin-bottom: 50px;
     }
+
     span.tags {
         box-sizing: content-box;
         display: inline-block;
